# Spell-Knight

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
engine/lib_audio_manager/: audio_manager.cpp  audio_manager.h
engine/lib_ecm/: ecm.cpp  ecm.h
engine/lib_input_manager/: input_manager.cpp  input_manager.h
engine/lib_maths/: maths.h
engine/lib_settings_parser/: settings_parser.cpp  settings_parser.h
engine/lib_texture_manager/: TextureManager.cpp  TextureManager.h  texture_manager.cpp  texture_manager.h
engine/lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
engine/src/: engine.cpp  engine.h  system_physics.cpp  system_physics.h  system_renderer.cpp  system_renderer.h  system_resources.cpp  system_resources.h
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: levelsystem.cpp  levelsystem.h
res/: level_1.txt  level_2.txt  lvl1.txt  lvl1_test.txt  settings.cfg  settings.txt
res/lang/: bg.txt  en.txt
res/levels/: level_1.txt  lvl1.txt  lvl2.txt
src/: Log.h  button.cpp  cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_sprite.cpp  cmp_sprite.h  config.cpp  config.h  entity_factory.cpp  entity_factory.h  game.cpp  game.h  input_manager.cpp  input_manager.h  main.cpp  parallax_background.cpp  parallax_background.h  platformer_main.cpp  scene.cpp  scene.h  settings_parser.cpp  system_renderer.cpp  system_renderer.h
src/GUI/: button.cpp  button.h  menu.cpp  menu.h  option_button.cpp  option_button.h  panel.cpp  panel.h
src/components/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_ai_steering.cpp  cmp_ai_steering.h  cmp_air_enemy_physics.cpp  cmp_air_enemy_physics.h  cmp_animated_sprite.cpp  cmp_animated_sprite.h  cmp_bullet.cpp  cmp_bullet.h  cmp_cleanup.cpp  cmp_cleanup.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_enemy_animated_sprite.cpp  cmp_enemy_animated_sprite.h  cmp_enemy_health.cpp  cmp_enemy_health.h  cmp_enemy_pathfinding.cpp  cmp_enemy_pathfinding.h  cmp_enemy_physics.cpp  cmp_enemy_physics.h  cmp_enemy_turret.cpp  cmp_enemy_turret.h  cmp_ground_enemy_physics.cpp  cmp_ground_enemy_physics.h  cmp_hurt_enemy.cpp  cmp_hurt_enemy.h  cmp_hurt_player.cpp  cmp_hurt_player.h  cmp_hut_player.cpp  cmp_moving_platform.cpp  cmp_moving_platform.h  cmp_particles.cpp  cmp_particles.h  cmp_physics.cpp  cmp_physics.h  cmp_pickup.cpp  cmp_pickup.h  cmp_player_animated_sprite.cpp  (+29 more)
src/misc/: entity_factory.cpp  entity_factory.h  parallax_background.cpp  parallax_background.h  particle_system.cpp  particle_system.h
src/pathfinding/: astar.cpp  astar.h  steering.cpp  steering.h
src/scenes/: scene_game_over.cpp  scene_game_over.h  scene_highscore.cpp  scene_highscore.h  scene_level1.cpp  scene_level1.h  scene_level2.cpp  scene_level2.h  scene_level3.cpp  scene_level3.h  scene_menu.cpp  scene_menu.h  scene_options.cpp  scene_options.h
src/states/: bird_states.cpp  bird_states.h  eye_states.cpp  eye_states.h  fish_states.cpp  fish_states.h  slime_states.cpp  slime_states.h
